Project3/testcases/moretest12.out

*** Error line 2.
	vec2 = v;
             ^
*** syntax error

