Project3/testcases/moretest12.glsl
void main() {
	vec2 = v;
	v.xx;
	v.xxxxx;
}

